// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`console printing 1`] = `
" PASS  __tests__/console-test.js
  ● Console

    console.log __tests__/console-test.js:11
      This is a log message.
    console.info __tests__/console-test.js:13
      This is an info message.
    console.warn __tests__/console-test.js:15
      This is a warning message.
    console.error __tests__/console-test.js:17
      This is an error message.


"
`;

exports[`console printing 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`console printing with --verbose 1`] = `
"  console.log __tests__/console-test.js:11
    This is a log message.

  console.info __tests__/console-test.js:13
    This is an info message.

  console.warn __tests__/console-test.js:15
    This is a warning message.

  console.error __tests__/console-test.js:17
    This is an error message.

"
`;

exports[`console printing with --verbose 2`] = `
" PASS  __tests__/console-test.js
  ✓ works just fine

"
`;

exports[`console printing with --verbose 3`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;

exports[`does not print to console with --silent 1`] = `""`;

exports[`does not print to console with --silent 2`] = `
" PASS  __tests__/console-test.js

"
`;

exports[`does not print to console with --silent 3`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites.
"
`;
